# ros_final_odevi

./: README.md
config/: mission.yaml
final_proje_repo/: CMakeLists.txt  package.xml
final_proje_repo/launch/: navigation.launch  simulation.launch  task_manager.launch
final_proje_repo/models/CHECKOUT_AREA/: model.sdf
final_proje_repo/models/INFORMATION_DESK/: model.config  model.sdf
final_proje_repo/models/INFORMATION_DESK/materials/scripts/: INFORMATION_DESK.material
final_proje_repo/models/NOVEL_SECTION/: model.sdf
final_proje_repo/models/NOVEL_SECTION/materials/scripts/: NOVEL_SECTION.material
final_proje_repo/src/: task_manager.py
maps/: map.pgm
models/CHECKOUT_AREA/: model.config
models/CHECKOUT_AREA/materials/scripts/: CHECKOUT_AREA.material
models/NOVEL_SECTION/: model.config
models/SCIENCE_SECTION/: model.config  model.sdf
models/SCIENCE_SECTION/materials/scripts/: SCIENCE_SECTION.material
src/: qr_reader.py
